# numerical-experiment

./: .gitignore  README.md  pyproject.toml
src/experiment/: experiment.py
src/studydesign/: experiment.py
tests/: cases.py  test_experiment.py
