[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "studydesign"
version = "0.0.1"
authors = [{ name = "Elliot Hill", email = "elliot.douglas.hill@gmail.com" }]
description = "A harness for simply univariate numerical experiments"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Elliot-D-Hill/numerical-experiment"
"Bug Tracker" = "https://github.com/Elliot-D-Hill/numerical-experiment/issues"
